--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background: #1C8EF9 !important;
+  background-image: url("https://image.shutterstock.com/image-photo/photos-sky-during-different-weather-260nw-1899360634.jpg");
   min-height: 100vh;
   display: flex;
   font-weight: 400;
