--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 body {
-  background-image: url("https://image.shutterstock.com/image-photo/photos-sky-during-different-weather-260nw-1899360634.jpg");
+  background-image: url("./Img/BgWeather.png");
   min-height: 100vh;
   display: flex;
   font-weight: 400;
   font-family: 'Fira Sans', sans-serif;
+  background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 code {
@@ -23,6 +26,11 @@ body, html, .App, #root, .auth-wrapper {
   width: 100%;
   height: 100%;
 }
+
+.ulExtended{
+  width: 100%;
+}
+
 .navbar-light {
   background-color: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
