--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,13 @@ body, html, .App, #root, .auth-wrapper {
 .ulExtended{
   width: 100%;
 }
-
+.DivLink{
+  width: 50%;
+  text-align: end;
+}
+.FormSearch{
+  display: flex;
+}
 .navbar-light {
   background-color: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
